# Auto-GPT

./: .gitignore  README.md  auto-gpt.json  main.py  notes.txt  prompt_settings.yaml  pyproject.toml  requirements.txt
.github/workflows/: ecr.yaml  org_pod.yaml
[DEC]auto_gpt/: auto_gpt.py  json_parser.py  llm_utils.py  logger.py  promptgenerator.py
[DEC]auto_gpt/memory/: base.py  redismem.py
[DEC]auto_gpt/organization/: organization.py
auto_gpt/: ai_functions.py  auto_gpt.py  browse.py  call_ai_function.py  chat.py  commands.py  config.py  image_gen.py  json_parser.py  json_utils.py  logger.py  prompt.py  speak.py
auto_gpt/memory/: __init__.py  base.py  local.py  pinecone.py  redismem.py
auto_gpt/organization/: __init__.py  organization.py
auto_gpt/utils/: clean_input.py  initialization_utils.py  (+2 more)
auto_gpt_workspace/: AI_Research_Infrastructure.txt  deep_q_learning_concepts_methods_applications.txt  deep_q_learning_overview.txt  double_deep_q_learning_and_soft_target_updates.txt  employee_roles_goals_budget.txt  file_logger.txt  git-error-1680858556942  initial_code.py  job_listing.txt  message_to_staff.txt  prioritized_tasks.txt  project_manager_status.txt  reinforcement_learning_concepts.txt  research_summary.txt  resumes.txt  sp500_yfinance.py  spacex_tesla_news.txt  techniques.txt
autogpt/: [dec]prompt.py  __main__.py  app.py  chat.py  cli.py  llm_utils.py  main.py  prompt.py  promptgenerator.py
scripts/: agent.py  ai_config.py  chat.py  commands.py  config.py  image_gen.py  json_parser.py  main.py  organization.py
tests/: json_tests.py
(+453 files in other folders)
